--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.462.0",
     "next": "14.2.15",
     "react": "^18",
     "react-countdown": "^2.3.6",
